...
    >
    <item
        android:id="@+id/tab_queue"
        android:icon="@drawable/ic_queue"
        android:title="@string/queue" />
    <item
        android:id="@+id/tab_request"
        android:icon="@drawable/ic_request"
        android:title="@string/request" />
</menu>
